--- a/assets/zbundles/chronofortress/_devList/目标列表.md
+++ b/assets/zbundles/chronofortress/_devList/目标列表.md
@@ -1,3 +1,23 @@
+# 武器
+
+## 武器种类
+
+科技向
+- [ ] 子弹
+- [ ] 手雷
+- [ ] 激光
+
+魔法向
+- [ ] 火球术
+- [ ] 冰晶术
+- [ ] 雷锁
+
+修真向
+- [ ] 金身
+- [ ] 御剑
+- [ ] 练气决
+
+## 武器特性
 
 - [x] 增加子弹的暴击,暴击率属性
 - [x] 增加子弹的穿透属性
@@ -22,12 +42,19 @@
 - [ ] 手雷的升级选项卡
 
 
-- [ ] 增加雷电链条
 
-- [ ] 火球术
+# 怪物
 
-- [ ] 冰晶锥
+## 怪物种类
 
-- [ ] 金身
+物体
+魔法
+修真
+科技
 
-- [ ] 护身剑阵
+
+## 怪物特性
+
+- [ ] 急速
+- [ ] 护盾
+- [ ] 恢复
