增加经验,整理代码:更简洁

--- a/assets/zbundles/chronofortress/_devList/目标列表.md
+++ b/assets/zbundles/chronofortress/_devList/目标列表.md
@@ -1,5 +1,12 @@
 # 武器
 
+## 游戏基础
+- [x] 经验
+- [ ] 金币
+- [x] 墙
+- [ ] 升级选项卡
+
+
 ## 武器种类
 
 科技向
@@ -26,8 +33,19 @@
 - [x] 增加子弹发射次数
 - [x] 增加子弹 反射
 - [ ] 增加子弹 弹跳
+- [ ] 增加子弹 触壁反弹
+- [ ] 增加子弹 缓慢变大
+- [ ] 增加子弹 返回
+- [ ] 增加子弹 驻地
 - [x] 增加子弹的爆炸效果(爆炸会导致穿透无效)属性
 - [ ] 增加子弹的升级选项卡
+
+- [ ] 增加炮台移动能力
+- [x] 增加炮台-自动攻击
+- [ ] 增加炮台-预判能力
+- [ ] 增加炮台-超频
+- [ ] 增加炮台-
+
 
 - [ ] 增加武器滚木
 - [ ] 滚木的升级选项卡
@@ -44,6 +62,9 @@
 
 
 # 怪物
+- [x] 怪物移动
+- [x] 怪物管理中心
+- [x] 怪物攻击墙
 
 ## 怪物种类
 
