--- a/assets/zbundles/chronofortress/_devList/目标列表.md
+++ b/assets/zbundles/chronofortress/_devList/目标列表.md
@@ -1,10 +1,24 @@
-# 武器
-
-## 游戏基础
+# 游戏基础
 - [x] 经验
 - [ ] 金币
 - [x] 墙
 - [ ] 升级选项卡
+- [ ] 可移动的视野
+- [ ]
+
+# 关卡
+进攻: 相对移速-进度越快,敌人速度越快 背景
+占领: 变成球体,在屏幕中央坚持指定时间
+防御: 部署永久防御建筑,并可以采集支援,快速移动等
+
+每次肉鸽游戏获取 局外智慧,局内时空之力(可携带出局外)
+每种道具都有其时空之力,必须满足其时空之力才可携带出局外
+
+通过携带出局内道具,是获取道具的主要方式aaaaaa
+道具繁多
+    精灵,伙伴,师傅,旅者,武器,藏品,芯片,材料
+# 武器
+
 
 
 ## 武器种类
